@@ -21,3 +21,7 @@ Version 2.9.6
 
 * Added `fourier_derivative_mpo` and `fourier_derivative` for QFT-based
   differentiation of functions.
+
+Fixes
+-----
+* `finite_differences_interpolation` now accepts an `order` parameter.
